--- a/styles/style.css
+++ b/styles/style.css
@@ -177,3 +177,423 @@ section {
   margin-left: 9px;
   font-size: 17px;
 }
+
+header.sticky {
+  padding: 12px 14%;
+  background: var(--bg-color);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* --------------- Technology Section ----------------------  */
+
+.wrapper {
+  padding: 30px 14% 70px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+  gap: 2rem;
+  text-align: center;
+}
+
+.wrapper-box {
+  padding: 25px 25px;
+  border: 1px solid rgba(45, 198, 83, 0.2);
+  background-color: var(--other-color);
+  border-radius: 10px;
+}
+
+.wrapper-box h1 {
+  font-size: 3rem;
+  font-weight: 100;
+  line-height: 0.9;
+  margin-bottom: 0.4rem;
+}
+
+.wrapper-box p {
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--main-color);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 0.2rem;
+}
+
+.specs {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 2rem;
+}
+
+.specs img {
+  width: 100%;
+  height: auto;
+}
+
+.spec-text h2 {
+  font-size: var(--h2-font);
+  font-weight: 800;
+  line-height: 0.9;
+  margin-bottom: 0.8rem;
+}
+
+.spec-text p {
+  font-size: 19.5px;
+  font-weight: 300;
+  margin-bottom: 1.2rem;
+}
+
+.spec-text h4 {
+  font-size: 23px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: var(--main-color);
+  margin-bottom: 0.9rem;
+}
+
+/* --------------- Shop section ----------------------  */
+
+.sub-title {
+  text-align: center;
+}
+
+.sub-title h4 {
+  font-size: 23px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: var(--main-color);
+  margin-bottom: 4px;
+}
+
+.sub-title h2 {
+  font-size: var(--h2-font);
+  font-weight: 800;
+  line-height: 0.9;
+  margin-bottom: 0.8rem;
+}
+
+.shop-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+  gap: 2rem;
+  align-items: center;
+  margin-top: 4rem;
+}
+
+.item-row {
+  position: relative;
+  padding: 10px 35px 40px;
+  border: 1px solid rgba(45, 198, 83, 0.2);
+  background: var(--other-color);
+  border-radius: 10px;
+}
+
+.item-row img {
+  width: 100%;
+  height: auto;
+  transition: var(--trasition);
+  cursor: pointer;
+}
+
+.item-row h3 {
+  font-size: 19.5px;
+  margin-bottom: 3px;
+  font-weight: 700;
+}
+
+.item-row p {
+  color: var(--second-color);
+  font-size: var(--p-font);
+  line-height: 20px;
+  margin-bottom: 0.5rem;
+}
+
+.text-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.text-info .price h6 {
+  font-size: 18px;
+  color: var(--main-color);
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.text-info .small-btn a {
+  display: inline-block;
+  padding: 4px 9px;
+  color: var(--bg-color);
+  font-size: 18px;
+  font-weight: 650;
+  background-color: var(--main-color);
+  border-radius: 5px;
+  transition: var(--trasition);
+}
+
+.text-info .small-btn a:hover {
+  background: var(--other-color);
+  color: var(--text-color);
+  transform: scale(1.03);
+}
+
+.item-row img:hover {
+  transform: scale(1.1) rotate(10deg);
+}
+
+.upper-icon {
+  position: absolute;
+  top: 30px;
+  left: 35px;
+}
+
+.upper-icon i {
+  font-size: 20px;
+  color: var(--main-color);
+}
+
+/* --------------- Testimonal Section  ----------------------  */
+.testimonial-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+  gap: 2rem;
+  align-items: center;
+  margin-top: 4rem;
+}
+
+.box {
+  padding: 25px;
+  background: var(--other-color);
+  border: 1px solid rgba(45, 198, 89, 0.2);
+  border-radius: 10px;
+}
+
+.box p {
+  color: var(--second-color);
+  font-size: var(--p-font);
+  line-height: 20px;
+  margin-bottom: 1rem;
+}
+
+.in-box {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.img-box img {
+  width: 100%;
+  height: auto;
+  border-radius: 3rem;
+}
+
+.box-text h4 {
+  margin: 3px 0;
+  font-size: 18px;
+}
+
+.box-text h5 {
+  color: var(--second-color);
+  font-size: 15px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 2px;
+}
+
+.ratings i {
+  color: var(--main-color);
+  font-size: 15px;
+  margin-left: 1px;
+}
+
+/* --------------- Footer and contact ----------------------  */
+.contact {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 3rem;
+}
+
+.contact-text h2 {
+  font-size: var(--h2-font);
+  font-weight: 800;
+  line-height: 0.9;
+  margin-bottom: 0.8rem;
+}
+
+.contact-text p {
+  font-size: 19.5px;
+  font-weight: 300;
+  margin-bottom: 1.2rem;
+}
+
+.contact-text h4 {
+  font-size: 23px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: var(--main-color);
+  margin-bottom: 0.9rem;
+}
+
+.social-icons i {
+  height: 40px;
+  width: 40px;
+  background: var(--other-color);
+  border: 1px solid rgba(45, 198, 83, 0.2);
+  border-radius: 0.5rem;
+  color: var(--main-color);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  margin-right: 10px;
+  transition: var(--trasition);
+}
+
+.social-icons i:hover {
+  transform: scale(1.05) translateY(-5px);
+  background: var(--main-color);
+  color: var(--text-color);
+}
+
+.contact-form {
+  position: relative;
+}
+
+.contact-form form input,
+.contact-form textarea {
+  border: 1px solid rgba(45, 198, 83, 0.2);
+  outline: none;
+  width: 100%;
+  padding: 18px;
+  background: var(--other-color);
+  color: var(--text-color);
+  font-size: 15.5px;
+  font-weight: 500;
+  border-radius: 10px;
+  margin-bottom: 0.5rem;
+}
+
+.contact-form textarea {
+  resize: none;
+  height: 200px;
+}
+
+button {
+  border: none;
+}
+
+/*---------------------- Footer section ------------------ */
+
+.footer {
+  text-align: center;
+  padding: 23px;
+  color: var(--second-color);
+  letter-spacing: 2px;
+  font-weight: 800;
+}
+
+/*---------------------- Media Query for mobile ------------------ */
+
+@media only screen and (max-width: 1540px) {
+  header {
+    padding: 20px 5%;
+    transition: var(--trasition);
+  }
+
+  header.sticky {
+    padding: 15px 5%;
+    transition: var(--trasition);
+  }
+}
+
+@media only screen and (max-width: 1188px) {
+  :root {
+    --big-font: 4.5rem;
+    --h2-font: 3.1rem;
+  }
+
+  .home {
+    height: 86vh;
+  }
+
+  .contact {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 1070px) {
+  :root {
+    --big-font: 4rem;
+    --h2-font: 2.8rem;
+  }
+
+  .home {
+    height: 82vh;
+  }
+}
+
+@media only screen and (max-width: 890px) {
+  #menu-icon {
+    display: block;
+  }
+
+  .navlist {
+    position: absolute;
+    top: -1000px;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    background: var(--other-color);
+    transition: var(--trasition);
+  }
+
+  .navlist a {
+    display: block;
+    padding: 0.5rem;
+    margin: 1rem;
+  }
+
+  .navlist.open {
+    top: 100%;
+  }
+}
+
+@media only screen and (max-width: 885px) {
+  :root {
+    --big-font: 3.8rem;
+    --h2-font: 2.7rem;
+  }
+
+  .home {
+    height: 86vh;
+    grid-template-columns: 1fr;
+  }
+  .home-text {
+    padding: 60px;
+  }
+
+  .home-img {
+    text-align: center;
+  }
+
+  .wrapper {
+    padding-top: 170px;
+  }
+
+  .specs {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  .btn2 {
+    display: none;
+  }
+}
